@@ -1,3 +1,8 @@
+2017-05-13  Trevor Saunders  <tbsaunde+gcc@tbsaunde.org>
+
+	* bitmap.h (class auto_bitmap): Change type of m_bits to
+	bitmap_head, and adjust ctor / dtor and member operators.
+
 2017-05-13  Uros Bizjak  <ubizjak@gmail.com>
 
 	* compare-elim.c (equivalent_reg_at_start): Return NULL_RTX
